--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
             </button>
         </div>
         <div class="weather loading">
-            <h2 class="city" id="city">Weather in Delhi</h2>
-            <h1 class="temp" id="temp">42°C</h1>
-            <div class="flex">
+            <h1 class="city" id="city">Delhi</h1>
+            <div class="flex tooltip">
+                <h1 class="temp" id="temp">42°C</h1>
                 <img src="https://openweathermap.org/img/wn/04n.png" alt="" id="icon" class="icon" />
                 <div class="description" id="description">Hot</div>
             </div>
-            
+            <!-- <h1 class="temp" id="temp">42°C</h1> -->
+            <div class="feels" id="feels">Feels like: 41°C</div>
+            <div class="pressure" id="pressure">Pressure: 1013</div>
+            <div class="max" id="max">Maximum: 42°C</div>
+            <div class="min" id="min">Minimum: 35°C</div>
             <div class="humidity" id="humidity">Humidity: 9%</div>
             <div class="wind" id="wind">Wind Speed: 10 km/h</div>
 
